[package]
name = "PKLorentzVector"
version = "0.1.0"
authors = ["artemis-beta <krizar312@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
PKVar = { path = "../PKVar" }

[[example]]
name = "PKLorentzVector"
path = "../examples/PKLorentzVector.rs"